другой шрифт (для транскрипций)

--- a/dictionarys.ui
+++ b/dictionarys.ui
@@ -40,8 +40,8 @@
    </property>
    <property name="font">
     <font>
-     <family>Arial</family>
-     <pointsize>11</pointsize>
+     <family>Lucida Sans Unicode</family>
+     <pointsize>10</pointsize>
     </font>
    </property>
    <property name="verticalScrollBarPolicy">
