--- a/dictionarys.ui
+++ b/dictionarys.ui
@@ -10,6 +10,9 @@
     <height>456</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::NoFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>Dictionarys</string>
   </property>
